[gd_scene load_steps=2 format=3 uid="uid://bp821um3bg1jg"]

[ext_resource type="Script" uid="uid://bffmic6k50g8i" path="res://scenes/ui.gd" id="1_nt7q6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="HeadBob" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Headbob Toggle"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/HeadBob" to="." method="_on_head_bob_pressed"]
